force-app/main/default/objects/Country_setting__c/Country_setting__c.object-meta.xml
<CustomObject>
    <description>This object is used to define the region for Account based on Billing CountryCode.</description>
    <label>Country Setting</label>
    <nameField>
        <label>Country setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>