force-app/main/default/objects/Country_setting__c/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <description>Names of the ISO countries</description>
    <label>CountryName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>