force-app/main/default/objects/Country_setting__c/fields/NX_RegionalSplitAccountplans__c.field-meta.xml
<CustomField>
    <fullName>NX_RegionalSplitAccountplans__c</fullName>
    <description>split voor de accountplans</description>
    <label>NX_RegionalSplitAccountplans</label>
    <length>40</length>
    <type>Text</type>
</CustomField>